--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,9 +2,11 @@ server:
   port: 8080
 
 logging:
-    level:
+   level:
         tk.mybatis: debug
         com.darklar7.mybatis.mapper: debug
+        org.springframework:
+              security: DEBUG
 spring:
   datasource:
     druid:
@@ -33,3 +35,15 @@ pagehelper:
     reasonable: true
     supportMethodsArguments: true
     params: count=countSql
+
+# JWT
+jwt:
+  header: Authorization
+  secret: mySecret
+  expiration: 604800
+  tokenHead: "Bearer "
+  route:
+    authentication:
+      path: auth
+      refresh: refresh
+      register: "auth/register"
